# BeckGlobal

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  dev.db  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 67fc2ff5aaf2_initial.py
app/: main.py
app/api/: dependencies.py  router.py  schemas.py
app/api/routes/: health.py  users.py
app/core/: config.py  exception.py  logging_config.py  security.py
app/database/: connection.py  session.py
app/models/: user.py
